<resources>
    <!--<string name="app_name">NativeChatApplication</string>-->
    <string name="app_name">CloudsChat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="string_removed">You can\'t send messages to this group because you\'re no longer a participant.</string>


    <string name="wellcome_title">WELCOME TO CLOUZER CHAT</string>
    <string name="wellcome_title1">You can get started with existing </string>
    <string name="wellcome_title2">Clouzer Id or create a new one</string>
    <string name="login_frag_title">LOG IN WITH YOUR CLOUZER ID</string>
    <string name="sign_frag_title">CREATE CLOUZER ACCOUNT</string>
    <string name="otp_frag_title">ENTER VERIFICATION CODE</string>
    <string name="login_btn">LOGIN</string>
    <string name="signup_btn">SIGN UP</string>
    <string name="signup_text"><u>SIGN UP</u></string>
    <string name="next_btn">NEXT</string>
    <string name="otp_verify_btn">VERIFY</string>
    <string name="txt_login"><u>LOG IN</u></string>
    <string name="txt_resend_otp"><u>RESEND CODE</u></string>
    <string name="txt_reset_pwd">RESET PASSWORD</string>
    <string name="txt_reset_using_sec_code">RESET USING SECURITY CODE</string>
    <string name="txt_send_code">SEND CODE</string>
    <string name="login_id_hint">Clouzer ID</string>
    <string name="pwd_hint">Password</string>
    <string name="rpwd_hint">Repeat Password</string>
    <string name="new_pwd_hint">New Password</string>
    <string name="re_enter_pwd_hint">Re-enter Password</string>
    <string name="reset_pwd">RESET</string>
    <string name="fname_hint">First Name</string>
    <string name="lname_hint">Last Name</string>
    <string name="choose_mstormid_hint">Choose Clouzer ID</string>
    <string name="pemail_id_hint">Personal Email ID</string>
    <string name="varification_hint">This id will be used for verification</string>
    <string name="progress_wait">Please Wait...</string>
    <string name="inbox_text">INBOX</string>
    <string name="contacts_text">CONTACT</string>
    <string name="agenda_text">AGENDA</string>
    <string name="setting_text">SETTINGS</string>
    <string name="accept_req_text"><u>ACCEPT</u></string>
    <string name="reject_req_text"><u>REJECT</u></string>
    <string name="decline_text"><u>DECLINE</u></string>
    <string name="more_details_text"><u>More Details</u></string>
    <string name="no_message_availble">No Message Available </string>
    <string name="app_exit_msg">Do you want to exit? </string>

    <!--login time validation strings-->
    <string name="empty_password">Password can\'t be empty.</string>
    <string name="password_short">Password is too short.</string>
    <string name="password_long">Password is too long.</string>
    <string name="empty_user_id">User ID can`t be empty.</string>
    <string name="valid_user_id">Please enter valid User ID.</string>
    <string name="empty_username_password">Please enter Username and password</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="enter_valid_password">Please enter valid password</string>
    <string name="login_response_not_received">No Response.Please try to login again.</string>

    <!--login success string-->
    <string name="login_success_msg">Login Success</string>

    <!--sign up time validation strings-->
    <string name="empty_firstname">Enter firstname</string>
    <string name="empty_lastname">Enter lastname</string>
    <string name="invalid_firstname">Invalid firstname</string>
    <string name="invalid_lastname">Invalid lastname</string>
    <string name="empty_mstorm_id">Enter Clouzer id</string>
    <string name="invalid_mstorm_id">Invalid Clouzer id</string>
    <string name="invalid_personal_mail_id">Invalid personal email id</string>
    <string name="empty_personal_mail_id">Enter personal email id</string>
    <string name="empty_repeat_password">Enter repeat password field</string>
    <string name="repeat_password_not_match">Password and confirm password is not match</string>
    <string name="signup_response_not_received">No Response.Please try to signup again.</string>
    <string name="only_special_characters_or_numbers">Must contain atleast one character.</string>


    <!--internet related strings-->
    <string name="internet_not_available">Device not connected to Internet</string>

    <!-- Material design Icons-->
    <string name="icon_dropdown">&#xf0d7;</string>
    <string name="icon_left_arrow">&#xE314;</string>
    <string name="icon_right_arrow">&#xE315;</string>
    <string name="icon_down_arrow">&#xE313;</string>
    <string name="icon_up_arrow">&#xE316;</string>
    <string name="icon_location">&#xE0C8;</string>

    <!-- path for img intent-->
    <string name="file_provider_authority" translatable="false">com.quiro.fileproviderexample.fileprovider</string>

    <!-- path for img intent-->
    <string name="messages">Messages</string>

    <!--drawer strings-->
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_contacts">Contacts</string>
    <string name="drawer_agenda">Agenda</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_log_out">Log Out</string>
    <string name="logout_que">Do you want to logout?</string>

    <!--Create Conversation-->
    <string name="create_conversation">Create Conversation</string>
    <string name="no_conversation">No Conversation Available</string>

    <!--search contact fragment-->
    <string name="search_type_mail_name">Type name or email</string>
    <string name="search_users">Search Users</string>

    <!--add contact fragment-->
    <string name="add_contact">View Contact</string>

    <string name="no_msg_available">No message inside group</string>


    <!--one time password strings-->
    <string name="after_send_code_done">Please check your registered mail</string>

    <!--if /sync socket not able to connect-->
    <string name="unableToConnect">Unable to connect</string>
    <string name="msg_not_available">Messages Not Available</string>

    <!--Contact Request Strings-->
    <string name="wants_to_connect_with_you">Wants to connect with you</string>

    <!--Forgot password strings-->
    <string name="recover_password">Recover Password</string>
    <string name="username">Username</string>
    <string name="personal_emailid">Personal email id</string>
    <string name="submit">Submit</string>
    <string name="forget_password">Email sent to mail id</string>
    <string name="forgot_password_wrong_username">Username or personal mail id is wrong, please re-enter.</string>
    <string name="empty_password_resetPassword">Please enter Password and reset password</string>
    <string name="password_reset_done">Password reset done successfully...</string>
    <string name="empty_username_emailId">Please Enter Username and Email id</string>
    <string name="invalid_username_emailId">Please enter valid Username and Email Id</string>

    <!--Change password strings-->
    <string name="change_pwd">CHANGE PASSWORD</string>
    <string name="confirm_new_pwd">Confirm new password</string>
    <string name="set_new_pwd">SET NEW PASSWORD</string>
    <string name="back_to_login">BACK TO LOGIN</string>
</resources>