<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme"
    tools:context="com.cloudsinc.welltekmobile.nativechatapplication.fragments.signup.Signup1Fragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/px_40"
                android:layout_marginBottom="@dimen/px_40"
                android:layout_marginLeft="@dimen/px_40"
                android:layout_marginRight="@dimen/px_40">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_50"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/txt_mstorm_ac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="center"
                        android:text="@string/sign_frag_title"
                        android:singleLine="true"
                        android:textSize="@dimen/px_18"/>
                </LinearLayout>
                <RelativeLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_80">
                    <RelativeLayout
                        android:layout_centerHorizontal="true"
                        android:layout_width="@dimen/px_80"
                        android:layout_height="@dimen/px_80">
                        <ImageView
                            android:id="@+id/img_user_profile"
                            android:layout_width="@dimen/px_80"
                            android:layout_centerInParent="true"
                            android:layout_height="@dimen/px_80"
                            android:src="@drawable/smiley"
                            android:layout_marginLeft="@dimen/px_5"/>
                        <ImageView
                            android:id="@+id/img_upload_image"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_centerHorizontal="true"
                            android:layout_width="@dimen/px_30"
                            android:layout_height="@dimen/px_30"
                            android:text="@string/drawer_log_out"
                            android:src="@android:drawable/ic_menu_camera"
                            />
                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_80"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <EditText
                        android:id="@+id/edit_mstormid"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px_50"
                        style="@style/edittext_style"
                        android:paddingLeft="@dimen/px_15"
                        android:paddingRight="@dimen/px_15"
                        android:hint="@string/choose_mstormid_hint"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_80"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <EditText
                        android:id="@+id/edit_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px_50"
                        style="@style/edittext_style"
                        android:paddingLeft="@dimen/px_15"
                        android:paddingRight="@dimen/px_15"
                        android:hint="@string/pwd_hint"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"/>
                    <ImageView
                        android:id="@+id/iconHidePass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_hide_pass"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/px_16"
                        android:layout_marginRight="@dimen/px_10"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_80"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <EditText
                        android:id="@+id/edit_repeate_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px_50"
                        style="@style/edittext_style"
                        android:paddingLeft="@dimen/px_15"
                        android:paddingRight="@dimen/px_35"
                        android:hint="@string/rpwd_hint"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"/>  <!--android:paddingRight="@dimen/px_15"-->
                    <ImageView
                        android:id="@+id/repeate_iconHidePass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_hide_pass"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/px_16"
                        android:layout_marginRight="@dimen/px_10"
                        />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_100"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <EditText
                        android:id="@+id/edit_mail_id"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px_50"
                        style="@style/edittext_style"
                        android:paddingLeft="@dimen/px_15"
                        android:paddingRight="@dimen/px_15"
                        android:hint="@string/pemail_id_hint"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionDone"/>
                    <TextView
                        android:id="@+id/txt_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px_5"
                        android:text="@string/varification_hint"
                        android:textSize="@dimen/px_12"
                        android:textColor="@color/colorBtnDark"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_80"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="bottom">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                        <Button
                            android:id="@+id/btn_next"
                            android:layout_width="match_parent"
                            style="@style/btn_style"
                            android:layout_height="@dimen/px_50"
                            android:text="@string/next_btn"
                            android:layout_weight="1.5"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>