<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cloudsinc.welltekmobile.nativechatapplication.fragments.login.WellcomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/px_40"
            android:layout_marginBottom="@dimen/px_40"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1.7">
                <ImageView
                    android:layout_width="@dimen/px_220"
                    android:layout_height="@dimen/px_150"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_app_logo"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7">
                <TextView
                    android:id="@+id/txt_welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/wellcome_title"
                    android:textSize="@dimen/px_18"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/txt_subtitile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/wellcome_title1"
                    android:textSize="@dimen/px_17"
                    android:textColor="@color/colorDescriptionTxt"/>
                <TextView
                    android:id="@+id/txt_subtitile1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/wellcome_title2"
                    android:textSize="@dimen/px_17"
                    android:textColor="@color/colorDescriptionTxt"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/px_5">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"/>
                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px_50"
                        android:text="@string/login_btn"
                        style="@style/btn_style"
                        android:layout_weight="1"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"/>
                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px_50"
                        style="@style/btn_trans_style"
                        android:text="@string/signup_btn"
                        android:layout_weight="1"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>