<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme"
    tools:context="com.cloudsinc.welltekmobile.nativechatapplication.fragments.signup.SignupFragment">
    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/px_40"
                android:layout_marginLeft="@dimen/px_40"
                android:layout_marginRight="@dimen/px_40">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_150"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/px_200"
                        android:layout_height="@dimen/px_130"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_app_logo"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_50"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/txt_mstorm_ac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/sign_frag_title"
                        android:singleLine="true"
                        android:textSize="@dimen/px_18"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_80"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <EditText
                        android:id="@+id/edit_fname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px_50"
                        style="@style/edittext_style"
                        android:paddingLeft="@dimen/px_15"
                        android:paddingRight="@dimen/px_15"
                        android:hint="@string/fname_hint"
                        android:inputType="textNoSuggestions"
                        android:imeOptions="actionNext"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_80"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <EditText
                        android:id="@+id/edit_lname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px_50"
                        style="@style/edittext_style"
                        android:paddingLeft="@dimen/px_15"
                        android:paddingRight="@dimen/px_15"
                        android:hint="@string/lname_hint"
                        android:inputType="textNoSuggestions"
                        android:imeOptions="actionDone"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_80"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                        <Button
                            android:id="@+id/btn_next"
                            android:layout_width="match_parent"
                            style="@style/btn_style"
                            android:layout_height="@dimen/px_50"
                            android:layout_marginBottom="@dimen/px_12"
                            android:text="@string/next_btn"
                            android:layout_weight="1.5"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_80"
                    android:layout_marginBottom="@dimen/px_15"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/txt_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_login"
                        android:textSize="@dimen/px_19"
                        android:textColor="@color/colorBlueTxt"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    <!--</ScrollView>-->

</LinearLayout>